--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,25 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.iml
+.DS_Store
+.plugins/
+.mylyn/
+.idea/
+out/
+target/
+.classpath
+.project
+.settings
+.externalToolBuilders
+Thumbs.db
+classes/
+*.pid
+bin/
+build/
+.metadata/
+logs/
+lifecycle/
+__ConfigTemp/
+*/.settings
